--- a/tensorflow教程/10.猫狗数据集自定义训练.ipynb
+++ b/tensorflow教程/10.猫狗数据集自定义训练.ipynb
@@ -557,7 +557,7 @@
      "text": [
       ".............................................................................................................................\n",
       "Epoch:1 , loss = 0.000140 , acc = 1.000000 , valid_loss = 0.000000 , valid_acc = 1.000000\n",
-      "......"
+      "......................................"
      ]
     }
    ],
@@ -582,6 +582,27 @@
    "outputs": [],
    "source": [
     "pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'xxxxxxxxxxxxxxsasdasffasdfadsfasdfd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-36-611e3af55c19>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mxxxxxxxxxxxxxxsasdasffasdfadsfasdfd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'xxxxxxxxxxxxxxsasdasffasdfadsfasdfd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "xxxxxxxxxxxxxxsasdasffasdfadsfasdfd"
    ]
   },
   {
